Fixed image styling issues.

--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
       font-family: "Slabo 27px", sans-serif;
       font-size: 18px;
     }
+    img {
+      max-width: 100%;
+    }
     .main_content {
       padding: 10px 20px 40px;
-    }
-    .main_content,
-    .lead_image {
       max-width: 750px;
       margin: 0 auto;
+    }
+    .lead_image {
+      width: 750px;
     }
     .screenshot {
       padding: 10px;
