Marty McPaper link changed.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <p>
       You are Marty McPaper, a delivery boy for the Tub County Herald. You're headed down Obstructive Lane, delivering papers and dodging numerous hindrances throughout Tub County's most affluent residential area. Hurry - they are not the most forgiving neighbors. And watch out - don't break their windows!
     </p>
-    <a href="http://martymcpaper.benwiley.org/" target="_blank">Playable Alpha Demo</a>
+    <a href="http://martymcpaper.saidyeti.com/" target="_blank">Playable Alpha Demo</a>
     <h3>Credits</h3>
     <ul>
       <li>Hannah Fitzgerald&mdash;Art</li>
