target='blank' removed from all a tags.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <p>
       You are Marty McPaper, a delivery boy for the Tub County Herald. You're headed down Obstructive Lane, delivering papers and dodging numerous hindrances throughout Tub County's most affluent residential area. Hurry - they are not the most forgiving neighbors. And watch out - don't break their windows!
     </p>
-    <a href="http://martymcpaper.saidyeti.com/" target="_blank">Playable Alpha Demo</a>
+    <a href="http://martymcpaper.saidyeti.com/">Playable Alpha Demo</a>
     <h3>Credits</h3>
     <ul>
       <li>Hannah Fitzgerald&mdash;Art</li>
@@ -48,9 +48,9 @@
       <li>Ben Wiley&mdash;Programming and Music</li>
     </ul>
     <h3>Screenshots</h3>
-    <a class="screenshot" href="img/papershot1.png" target="_blank"><img src="img/papershot1.png" width="350"/></a>
-    <a class="screenshot" href="img/papershot2.png" target="_blank"><img src="img/papershot2.png" width="350"/></a>
-    <a class="screenshot" href="img/letsdothis.png" target="_blank"><img src="img/letsdothis.png" width="350"/></a>
+    <a class="screenshot" href="img/papershot1.png"><img src="img/papershot1.png" width="350"/></a>
+    <a class="screenshot" href="img/papershot2.png"><img src="img/papershot2.png" width="350"/></a>
+    <a class="screenshot" href="img/letsdothis.png"><img src="img/letsdothis.png" width="350"/></a>
     <h2>Email Us!</h2>
     <a class="email_contact" href="mailto:hannahfitzgerald@icloud.com">Hannah Fitzgerald (Designer)</a>
     <a class="email_contact" href="mailto:benwiley@benwiley.org">Ben Wiley (Programmer)</a>
