Italic font style applied to ld35 preview line.

--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@
     .email_contact {
       display: block;
     }
+    .ld35_preview {
+      font-style: italic;
+    }
   </style>
 </head>
 <body>
   <div class="main_content">
     <h1>Said Yeti</h1>
-    <p class="ld35-preview">Check out a preview of our latest game <a href="http://ludumdare.com/compo/ludum-dare-35/?action=preview&uid=64674">here</a>!</p>
+    <p class="ld35_preview">Check out a preview of our latest game <a href="http://ludumdare.com/compo/ludum-dare-35/?action=preview&uid=64674">here</a>!</p>
     <h2>Marty McPaper: Epic Delivery Service</h2>
     <img class="lead_image" src="img/martymcpapertitlecropped.png" alt="Marty McPaper: Epic Delivery Service"/>
     <p>
